@@ -3,7 +3,7 @@
  * Various functions used by the language editor of PhpGedView
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2008  PGV Development Team.  All rights reserved.
+ * Copyright (C) 2002 to 2009  PGV Development Team.  All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -32,47 +32,41 @@ if (!defined('PGV_PHPGEDVIEW')) {
 define('PGV_FUNCTIONS_EDITLANG_PHP', '');
 
 //-----------------------------------------------------------------
-function add_backslash_before_dollarsign($dstring)
-{
+function add_backslash_before_dollarsign($dstring) {
 	$dummy = str_replace(chr(92) . chr(36), chr(36), $dstring);
 	$dummy = str_replace(chr(36), chr(92) . chr(36), $dummy);
 	return $dummy;
 }
 
 //-----------------------------------------------------------------
-function crlf_lf_to_br($dstring)
-{
+function crlf_lf_to_br($dstring) {
 	$dummy = str_replace("\r\n", "<br />", $dstring);
 	$dummy = str_replace("\n", "<br />", $dummy);
 	return $dummy;
 }
 
 //-----------------------------------------------------------------
-function mask_all($dstring)
-{
+function mask_all($dstring) {
 	$dummy = str_replace(array('&', '<', '>'), array('&amp;', '&lt;', '&gt;'), $dstring);
 	return $dummy;
 }
 
 //-----------------------------------------------------------------
-function unmask_all($dstring)
-{
+function unmask_all($dstring) {
 	$dummy = str_replace(array('&lt;', '&gt;', '&amp;'), array('<', '>', '&'), $dstring);
 	return $dummy;
 }
 
 //-----------------------------------------------------------------
-function LockFile($Temp_Filename)
-{
-	while (file_exists($Temp_Filename . ".tmp")){clearstatcache();} # wait till file is deleted
+function LockFile($Temp_Filename) {
+	while (file_exists($Temp_Filename . ".tmp")) {clearstatcache();} # wait till file is deleted
 	$fp = fopen($Temp_Filename . ".tmp", "w");
 	fclose($fp); # temp-file to block all access to $Filename
 }
 
 //-----------------------------------------------------------------
-function UnLockFile($Temp_Filename)
-{
-	while (!@unlink($Temp_Filename . ".tmp")){clearstatcache();} # remove file block
+function UnLockFile($Temp_Filename) {
+	while (!@unlink($Temp_Filename . ".tmp")) {clearstatcache();} # remove file block
 }
 
 
@@ -97,44 +91,44 @@ function read_complete_file_into_array($dFileName, $string_needle) {
 		$Language2 = ucfirst($language2);
 
 		switch ($file_type) {
-			case "lang":
-			case "admin":
-			case "editor":
-				$comment1 = "$Language2 Language file for PhpGedView.";
-				$comment2 = "// -- Define $Language2 texts for use on various pages";
-				break;
-			case "facts":
-				$comment1 = "$Language2 Language file for PhpGedView.";
-				$comment2 = "// -- Define a fact array to map GEDCOM tags with their $Language2 values";
-				break;
-			case "configure_help":
-				$comment1 = "$Language2 Language file for PhpGedView.";
-				$comment2 = "//-- Define $Language2 Help texts for use on Configuration pages";
-				break;
-			case "help_text":
-				$comment1 = "$Language2 Language file for PhpGedView.";
-				$comment2 = "//-- Define $Language2 Help texts for use on various pages";
-				break;
-			case "countries":
-				$comment1 = "$Language2 Language file for PhpGedView.";
-				$comment2 = "//-- Define $Language2 name equivalents for Chapman country codes";
-				break;
-			case "faqlist":
-				$comment1 = "$Language2 FAQ file for PhpGedView.";
-				$comment2 = "//-- Define $Language2 Frequently Asked Questions";
-				break;
-			case "extra":
-				$comment1 = "$Language2 extra definitions file for PhpGedView.";
-				$comment2 = "//-- Define $Language2 extra definitions";
-				break;
-			case "rs_lang":
-				$comment1 = "$Language2 Language file for PhpGedView Researchlog";
-				$comment2 = '// -- RS GENERAL MESSAGES';
-				break;
-			default:
-				$comment1 = 'This should never happen';
-				$comment2 = '';
-				break;
+		case "lang":
+		case "admin":
+		case "editor":
+			$comment1 = "$Language2 Language file for PhpGedView.";
+			$comment2 = "// -- Define $Language2 texts for use on various pages";
+			break;
+		case "facts":
+			$comment1 = "$Language2 Language file for PhpGedView.";
+			$comment2 = "// -- Define a fact array to map GEDCOM tags with their $Language2 values";
+			break;
+		case "configure_help":
+			$comment1 = "$Language2 Language file for PhpGedView.";
+			$comment2 = "//-- Define $Language2 Help texts for use on Configuration pages";
+			break;
+		case "help_text":
+			$comment1 = "$Language2 Language file for PhpGedView.";
+			$comment2 = "//-- Define $Language2 Help texts for use on various pages";
+			break;
+		case "countries":
+			$comment1 = "$Language2 Language file for PhpGedView.";
+			$comment2 = "//-- Define $Language2 name equivalents for Chapman country codes";
+			break;
+		case "faqlist":
+			$comment1 = "$Language2 FAQ file for PhpGedView.";
+			$comment2 = "//-- Define $Language2 Frequently Asked Questions";
+			break;
+		case "extra":
+			$comment1 = "$Language2 extra definitions file for PhpGedView.";
+			$comment2 = "//-- Define $Language2 extra definitions";
+			break;
+		case "rs_lang":
+			$comment1 = "$Language2 Language file for PhpGedView Researchlog";
+			$comment2 = '// -- RS GENERAL MESSAGES';
+			break;
+		default:
+			$comment1 = 'This should never happen';
+			$comment2 = '';
+			break;
 		}
 
 		$dFound = ($fp = @fopen($Filename, "w"));
@@ -194,29 +188,29 @@ function read_complete_file_into_array($dFileName, $string_needle) {
 			$foundNeedle = false;
 			if (!$inComment) {
 				foreach ($array_needle as $needle) {
-				  if (!$foundNeedle && $x = strpos(trim($line), $needle)) {
-					if ($x == 1) {
-						$line_mine = $line;
-						$line = trim($line);
-						$key = trim(substr($line, 0, strpos($line, "]") + 1));
-						$ct = preg_match("/=\s*\"(.*)\"/", $line, $match);
-						# if ($ct>0) $content = trim($match[1]);
-						if ($ct>0) $content = $match[1];
-						else $content = "";
-						$InfoArray[$LineCounter][0] = $key;				// keystring
-						# print "#".$key."# ";
-						$InfoArray[$LineCounter][1] = $content;			// message of keystring
-
-						# print "#".$content."#<br />";
-						if ($content != "") {
-							$InfoArray[$LineCounter][2] = get_last_string($line_mine, $content);	// pos of the first char of the message
+					if (!$foundNeedle && $x = strpos(trim($line), $needle)) {
+						if ($x == 1) {
+							$line_mine = $line;
+							$line = trim($line);
+							$key = trim(substr($line, 0, strpos($line, "]") + 1));
+							$ct = preg_match("/=\s*\"(.*)\"/", $line, $match);
+							# if ($ct>0) $content = trim($match[1]);
+							if ($ct>0) $content = $match[1];
+							else $content = "";
+							$InfoArray[$LineCounter][0] = $key;				// keystring
+							# print "#".$key."# ";
+							$InfoArray[$LineCounter][1] = $content;			// message of keystring
+                	
+							# print "#".$content."#<br />";
+							if ($content != "") {
+								$InfoArray[$LineCounter][2] = get_last_string($line_mine, $content);	// pos of the first char of the message
+							}
+							else $InfoArray[$LineCounter][2] = "";
+                	
+							$InfoArray[$LineCounter][3] = $line_mine;			// complete line
+							$foundNeedle = true;
 						}
-						else $InfoArray[$LineCounter][2] = "";
-
-						$InfoArray[$LineCounter][3] = $line_mine;			// complete line
-						$foundNeedle = true;
 					}
-				  }
 		    	}
 	    	}
 			if (!$foundNeedle) $InfoArray[$LineCounter][0] = $line;
@@ -236,8 +230,7 @@ function read_complete_file_into_array($dFileName, $string_needle) {
 }
 
 //-----------------------------------------------------------------
-function find_in_file($MsgNr, $dlang_file)
-{
+function find_in_file($MsgNr, $dlang_file) {
 	global $PGV_BASE_DIRECTORY;
 	$openfilename =  $dlang_file;
 	$my_array = @file($openfilename);
@@ -252,77 +245,49 @@ function find_in_file($MsgNr, $dlang_file)
 }
 
 //-----------------------------------------------------------------
-function find_key_in_new_language_old($new_array, $string_needle)
-{
+function find_key_in_new_language_old($new_array, $string_needle) {
 	$dummy = "";
 	$dcount = 0;
-	while ($new_array[$dcount] != "")
-	{
-		if ($new_array[$dcount][0] == $string_needle){return $dcount;}
+	while ($new_array[$dcount] != "") {
+		if ($new_array[$dcount][0] == $string_needle) return $dcount;
 		$dcount++;
 	}
 	return false;
 }
 
 //-----------------------------------------------------------------
-function write_array_into_file($dFileName01, $writeArray, $add_new_message_at_line, $new_message_string)
-{
+function write_array_into_file($dFileName01, $writeArray, $add_new_message_at_line, $new_message_string) {
 	global $PGV_BASE_DIRECTORY;
 
 	$Filename =  $dFileName01;
 	LockFile($Filename);
 
 	$LineCounter = 0;
-	if ($fp = @fopen($Filename, "w"))
-	{
-	$could_write = true;
-	foreach($writeArray as $indexval => $var)
-	{
-		/* A new message which didn't exist before inside the language file */
-		if ($LineCounter == $add_new_message_at_line)
-		{
-			fwrite($fp, $new_message_string.PGV_EOL);
+	if ($fp = @fopen($Filename, "w")) {
+		$could_write = true;
+		foreach ($writeArray as $indexval => $var) {
+			/* A new message which didn't exist before inside the language file */
+			if ($LineCounter == $add_new_message_at_line) {
+				fwrite($fp, $new_message_string.PGV_EOL);
+				$LineCounter++;
+			}
+    	
+			if (empty($var[1])) {
+				if (isset($var[3])) {
+					/* Message content is empty */
+					fwrite($fp, $var[3]);
+				} else {
+					/* Outlined file content */
+					fwrite($fp, $var[0]);
+				}
+			} else {
+				$output = substr($var[3], 0, $var[2]).$var[1]."\";".PGV_EOL;
+				fwrite($fp, $output);
+			}
 			$LineCounter++;
 		}
-
-		if (empty($var[1]))
-		{
-			if (isset($var[3]))
-			{
-				/* Message content is empty */
-				# print "var[3]= -" . $var[3]."-";
-				# exit;
-				fwrite($fp, $var[3]);
-			}
-			else
-			{
-				/* Outlined file content */
-				# print "var[0]= -" . $var[0]."-";
-				# exit;
-				fwrite($fp, $var[0]);
-			}
-		}
-		else
-		{
-			/* Real message content */
-			# print "var[3]= -" . $var[3]."-<br />";
-			# print "var[2]= -" . $var[2]."-<br />";
-
-			fwrite($fp, substr($var[3], 0, $var[2]));
-			# print "substr= -" . substr($var[3], 0, $var[2])."-<br />";
-
-			fwrite($fp, $var[1]);
-			# print "var[1]= -" . $var[1]."-<br />";
-
-			fwrite($fp, "\";".PGV_EOL);
-			# print "<br />";
-			# exit;
-		}
-		$LineCounter++;
-	}
-	fclose($fp);
-	}
-	else $could_write = false;
+		fclose($fp);
+	} else $could_write = false;
 
 	UnLockFile($Filename);
 	return $could_write;
@@ -341,7 +306,8 @@ function read_export_file_into_array($dFileName, $string_needle) {
 	$dFound = ($fp = @fopen($Filename, "r"));
 
 	if (!$dFound)  {
-		print "Error file not found"; Exit;
+		print "Error file not found"; 
+		exit;
 	} else {
 		$inComment = false;		// Indicates whether we're skipping from "/*" to "*/"
 		$slashStar = "/*";
@@ -364,20 +330,20 @@ function read_export_file_into_array($dFileName, $string_needle) {
 
 			$foundNeedle = false;
 			foreach ($array_needle as $needle) {
-			  if (!$foundNeedle && $x = strpos(trim($line), $needle)) {
-				if ($x == 1) {
-					$line_mine = $line;
-					$line = trim($line);
-					$key = trim(substr($line, 0, strpos($line, "]") + 1));
-					$ct = preg_match("/=\s*\"(.*)\";/", $line, $match);
-					if ($ct>0) $content = $match[1];
-					else $content = "";
-					$InfoArray[$LineCounter][0] = $key;				// keystring
-					$InfoArray[$LineCounter][1] = $content;			// message of keystring
-					$foundNeedle = true;
+				if (!$foundNeedle && $x = strpos(trim($line), $needle)) {
+					if ($x == 1) {
+						$line_mine = $line;
+						$line = trim($line);
+						$key = trim(substr($line, 0, strpos($line, "]") + 1));
+						$ct = preg_match("/=\s*\"(.*)\";/", $line, $match);
+						if ($ct>0) $content = $match[1];
+						else $content = "";
+						$InfoArray[$LineCounter][0] = $key;				// keystring
+						$InfoArray[$LineCounter][1] = $content;			// message of keystring
+						$foundNeedle = true;
+					}
+					$LineCounter++;
 				}
-				$LineCounter++;
-			  }
 			}
 		}
 		fclose($fp);
@@ -385,23 +351,23 @@ function read_export_file_into_array($dFileName, $string_needle) {
 	return $InfoArray;
 }
 //-----------------------------------------------------------------
-function get_last_string($hay, $need){
-	$getLastStr = 0;
+function get_last_string($hay, $need) {
+//	$getLastStr = 0;
 	$pos = strpos($hay, $need);
-	if (is_int ($pos)){ //this is to decide whether it is "false" or "0"
-		while($pos) {
-			$getLastStr = $getLastStr + $pos + strlen($need);
-			$hay = substr ($hay , $pos + strlen($need));
-			$pos = strpos($hay, $need);
-		}
-		return $getLastStr - strlen($need);
-	}
-	else {
-		return -1; //if $need wasnt found it returns "-1" , because it could return "0" if it´s found on position "0".
+	if (is_int ($pos)) { //this is to decide whether it is "false" or "0"
+//		while($pos) {
+//			$getLastStr = $getLastStr + $pos + strlen($need);
+//			$hay = substr ($hay , $pos + strlen($need));
+//			$pos = strpos($hay, $need);
+//		}
+//		return $getLastStr - strlen($need);
+		return $pos;
+	} else {
+		return -1; //if $need wasn't found it returns "-1" , because it could return "0" if it's found on position "0".
 	}
 }
 //-----------------------------------------------------------------
-function check_bom(){
+function check_bom() {
 	global $language_settings, $pgv_lang;
 	$check = false;
 	$fileList = array("pgv_language", "confighelpfile", "helptextfile", "factsfile", "adminfile", "editorfile", "countryfile");
@@ -422,7 +388,7 @@ function check_bom(){
 						print "<span class=\"warning\">".$pgv_lang["bom_found"].substr($language[$fileName], 10).".</span>";
 						print "<br />";
 						$writetext = substr($str, strlen(PGV_UTF8_BOM));
-						if (!$handle = @fopen($language[$fileName], "w")){
+						if (!$handle = @fopen($language[$fileName], "w")) {
 							print "<span class=\"warning\">";
 							print str_replace("#lang_filename#", substr($language[$fileName], 10), $pgv_lang["no_open"]) . "<br /><br />";
 							print "</span>";
